<!--
    Copyright (c) 2022 Qualcomm Technologies, Inc.
    All Rights Reserved.
    Confidential and Proprietary - Qualcomm Technologies, Inc.
-->
<resources>
    <string name="app_name">DcfNearbyClientApp</string>
    <string name="title_main">Presence</string>
    <string name="title_device_detail">Device detail</string>
    <string name="title_more_settings">More Settings</string>
    <string name="action_settings">Settings</string>
    <string name="local_device_prefix">This Device(%1$s)</string>
    <string name="default_device_name_prefix">DCF_</string>

    <string name="notification_channel_name_presence">Presence</string>
    <string name="notification_presence_Title">Presence Notification</string>
    <string name="notification_presence_content">Discover a new DCF device!</string>

    <string name="device_status_and_battery">%1$s, %2$d%% battery</string>

    <string name="device_detail_category_general">General</string>
    <string name="device_detail_item_name">Name</string>
    <string name="device_detail_item_type">Type</string>
    <string name="device_detail_item_status">Status</string>
    <string name="device_detail_item_id">Device ID</string>
    <string name="device_detail_category_battery">Battery</string>
    <string name="device_detail_item_battery_status">Status</string>
    <string name="device_detail_item_battery_Level">Level</string>
    <string name="device_detail_category_Address">Mac Address</string>
    <string name="device_detail_item_BLE">Bluetooth</string>
    <string name="device_detail_item_wifi">Wi-Fi</string>
    <string name="device_detail_category_capability">Capability</string>
    <string name="device_detail_item_screen_share">Screen sharing</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title_config_device_name">Configure Device Name</string>
    <string name="dialog_title_config_device_type">Configure Device Type</string>
    <string name="dialog_title_config_device_status">Configure Device Status</string>

    <string name="settings_category_scan">Scan</string>
    <string name="settings_title_scan_enable">Scan presence devices</string>
    <string name="settings_summary_scan_enable">Start or stop scan presence devices</string>
    <string name="settings_title_scan_mode">Scan Mode</string>
    <string name="settings_category_broadcast">Broadcast</string>
    <string name="settings_title_broadcast_enable">Broadcast this Device</string>
    <string name="settings_summary_broadcast_enable">Start or stop advertising with this Device</string>
    <string name="settings_title_battery_broadcast_interval">Battery Broadcast Interval</string>
    <string name="settings_category_context_sync">Context sync</string>
    <string name="settings_title_context_sync_enable">Enable context sync</string>
    <string name="settings_summary_context_sync_enable">Enable or disable context sync</string>
    <string name="settings_title_send_notification_interval">Notification Interval</string>
    <string name="settings_category_screen_share">Screen Share</string>
    <string name="settings_title_screen_share_enable">Enable screen sharing capability</string>
    <string name="settings_summary_screen_share_enable">Enable or disable this capability</string>
    <string name="settings_title_screen_share_role">Role of screen sharing</string>

    <string name="enum_device_type_phone">Phone</string>
    <string name="enum_device_type_tablet">Tablet</string>
    <string name="enum_device_type_display">Display</string>
    <string name="enum_device_type_laptop">Laptop</string>
    <string name="enum_device_type_tv">Tv</string>
    <string name="enum_device_type_watch">Watch</string>
    <string name="enum_device_type_unknown">Unknown</string>

    <string name="enum_device_status_active">Active</string>
    <string name="enum_device_status_idle">Idle</string>
    <string name="enum_device_status_device_locked">Device Locked</string>
    <string name="enum_device_status_device_unlocked">Device Unlocked</string>
    <string name="enum_device_status_unknown">Unknown Status</string>

    <string name="enum_battery_status_charged">Charged</string>
    <string name="enum_battery_status_charging">Charging</string>
    <string name="enum_battery_status_discharging">Discharging</string>
    <string name="enum_battery_status_unknown">Unknown</string>

    <string name="enum_screen_share_source">Source</string>
    <string name="enum_screen_share_sink">Sink</string>
    <string name="state_screen_share_connect">Connect</string>
    <string name="state_screen_share_disconnect">Disconnect</string>
    <string name="state_screen_share_connecting">Connecting</string>
    <string name="state_screen_share_disconnecting">Disconnecting</string>

    <string name="toast_warning_bluetooth_off">Please turn on bluetooth to use dcf feature</string>
    <string name="toast_warning_permissions_deny">Please allow permissions to use dcf feature</string>
    <string name="toast_error_bluetooth_off">bluetooth is off, close the app</string>
    <string name="toast_error_permissions_deny">permissions is denied, close the app</string>
    <string name="toast_error_service_permissions_deny">service permissions is denied, close the app</string>
    <string name="toast_error_screen_sharing_connect_failed">failed to establish connection</string>
    <string name="toast_error_screen_sharing_disconnect_failed">failed to teardown connection</string>
    <string name="toast_device_name_input_limitation">Device name needs to be within 11 characters</string>

    <string name="toast_error_credential_file_not_found">Credential File not found, exit the app</string>
    <string name="toast_error_credential_file_error">Credential File error, exit the app</string>
</resources>
